--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "project-z",
   "version": "1.0.0",
-  "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "16.8.6",
+    "react": "^16.8.6",
     "react-dom": "16.8.6",
     "react-router-dom": "6.10.0",
     "react-scripts": "3.2.0"
@@ -24,5 +23,16 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DeepakReddyVelagala/Project-Z.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DeepakReddyVelagala/Project-Z/issues"
+  },
+  "homepage": "https://github.com/DeepakReddyVelagala/Project-Z#readme",
+  "description": ""
 }
