--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-router-dom": "6.10.0",
-    "react-scripts": "3.2.0"
+    "react": "^16.14.0",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^6.11.0",
+    "react-scripts": "^3.2.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
@@ -28,11 +28,11 @@
     "type": "git",
     "url": "git+https://github.com/DeepakReddyVelagala/Project-Z.git"
   },
-  "author": "",
+  "author": "Varshitha",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/DeepakReddyVelagala/Project-Z/issues"
   },
   "homepage": "https://github.com/DeepakReddyVelagala/Project-Z#readme",
-  "description": ""
+  "description": "\"Dashboard app for genz\""
 }
