--- a/package.json
+++ b/package.json
@@ -1,27 +1,14 @@
 {
   "name": "project-z",
   "version": "1.0.0",
+  "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-<<<<<<< HEAD
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "^3.2.0"
-=======
-<<<<<<< HEAD
-    "react": "^16.8.6",
+    "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-router-dom": "6.10.0",
     "react-scripts": "3.2.0"
-=======
-    "react": "^16.14.0",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^6.11.0",
-    "react-scripts": "^3.2.0"
->>>>>>> 50daaef96493ae2c5a543e27e9f35bb79d2a6b21
->>>>>>> 203d933cc82879709572593022f4d88147ca0a49
   },
   "devDependencies": {
     "typescript": "3.3.3"
@@ -37,16 +24,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DeepakReddyVelagala/Project-Z.git"
-  },
-  "author": "Varshitha",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DeepakReddyVelagala/Project-Z/issues"
-  },
-  "homepage": "https://github.com/DeepakReddyVelagala/Project-Z#readme",
-  "description": "\"Dashboard app for genz\""
+  ]
 }
